# Hearth

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  hearth_spec.md  install.sh
config/: hearth.toml
crates/hearth-cli/: Cargo.toml
crates/hearth-cli/src/: main.rs
crates/hearth-core/: Cargo.toml
crates/hearth-core/src/: capture.rs  config.rs  geo.rs  lib.rs  oui.rs  stats.rs  store.rs  types.rs
crates/hearth-core/tests/: stats_test.rs  store_test.rs
crates/hearth-daemon/: Cargo.toml
crates/hearth-daemon/src/: main.rs
crates/hearth-dashboard/: Cargo.toml
crates/hearth-dashboard/src/: handlers.rs  lib.rs
crates/hearth-dashboard/static/: index.html
crates/hearth-rules/: Cargo.toml
crates/hearth-rules/src/: lib.rs
crates/hearth-vad/: Cargo.toml
crates/hearth-vad/src/: audio.rs  log.rs  main.rs  model.rs
systemd/: hearth.service
