[workspace]
members = [
    "crates/hearth-core",
    "crates/hearth-daemon",
    "crates/hearth-dashboard",
    "crates/hearth-vad",
    "crates/hearth-rules",
    "crates/hearth-cli",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.31", features = ["bundled"] }
axum = { version = "0.7", features = ["ws"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
