[package]
name = "hearth-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
pnet = "0.35"
dns-lookup = "2.0"
maxminddb = "0.23"
csv = "1.3"

[lib]
name = "hearth_core"
path = "src/lib.rs"

