[package]
name = "hearth-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
hearth-core = { path = "../hearth-core" }
tower-http = { version = "0.5", features = ["cors"] }

[lib]
name = "hearth_dashboard"
path = "src/lib.rs"
