[package]
name = "hearth-rules"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
hearth-core = { path = "../hearth-core" }

[lib]
name = "hearth_rules"
path = "src/lib.rs"
